fix overflow x

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 
 body {
   background: white;
+  overflow-x: hidden;
 }
 
 /* Main Navigation */
